<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.About">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_app_icon" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="-30dp"
        android:textAlignment="center"
        android:text="@string/activity_about_tvTitle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:textSize="35sp"
        android:textColor="#431a64"
        android:textAlignment="center"
        android:text="@string/activity_about_tvNameDev" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:textSize="18sp"
        android:textColor="#111fbe"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/activity_about_tvEmailLabel" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/activity_about_tvEmail" />

    <ImageView
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_email_black_24dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:textSize="18sp"
        android:textColor="#1532d6"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/activity_about_tvCopyRight" />

</RelativeLayout>